k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chibest
  labels:
    app.kubernetes.io/name: chibest
